@@ -29,10 +29,10 @@ import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.time.Instant;
 import java.util.Collection;
@@ -45,9 +45,8 @@ import java.util.Properties;
 import java.util.Queue;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 
-import org.apache.jackrabbit.guava.common.base.Charsets;
-import org.apache.jackrabbit.guava.common.base.Function;
 import org.apache.jackrabbit.guava.common.base.Strings;
 import org.apache.jackrabbit.guava.common.cache.Cache;
 import org.apache.jackrabbit.guava.common.cache.CacheBuilder;
@@ -463,13 +462,7 @@ public class AzureBlobStoreBackend extends AbstractSharedBackend {
     @Override
     public Iterator<DataIdentifier> getAllIdentifiers() throws DataStoreException {
         return new RecordsIterator<DataIdentifier>(
-                new Function<AzureBlobInfo, DataIdentifier>() {
-                    @Override
-                    public DataIdentifier apply(AzureBlobInfo input) {
-                        return new DataIdentifier(getIdentifierName(input.getName()));
-                    }
-                }
-        );
+                input -> new DataIdentifier(getIdentifierName(input.getName())));
     }
 
 
@@ -516,6 +509,7 @@ public class AzureBlobStoreBackend extends AbstractSharedBackend {
 
     @Override
     public void close() throws DataStoreException {
+        azureBlobContainerProvider.close();
         LOG.info("AzureBlobBackend closed.");
     }
 
@@ -1179,9 +1173,9 @@ public class AzureBlobStoreBackend extends AbstractSharedBackend {
                 StringBuilder builder = new StringBuilder();
                 for (Map.Entry<String, String> e : additionalQueryParams.entrySet()) {
                     builder.append("&");
-                    builder.append(URLEncoder.encode(e.getKey(), Charsets.UTF_8.name()));
+                    builder.append(URLEncoder.encode(e.getKey(), StandardCharsets.UTF_8));
                     builder.append("=");
-                    builder.append(URLEncoder.encode(e.getValue(), Charsets.UTF_8.name()));
+                    builder.append(URLEncoder.encode(e.getValue(), StandardCharsets.UTF_8));
                 }
                 uriString += builder.toString();
             }
@@ -1191,7 +1185,7 @@ public class AzureBlobStoreBackend extends AbstractSharedBackend {
         catch (DataStoreException e) {
             LOG.error("No connection to Azure Blob Storage", e);
         }
-        catch (URISyntaxException | InvalidKeyException | UnsupportedEncodingException e) {
+        catch (URISyntaxException | InvalidKeyException e) {
             LOG.error("Can't generate a presigned URI for key {}", key, e);
         }
         catch (StorageException e) {
